src/snapshots/sqlc__test__select__join__join_using.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub title: String,
    pub name: String,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT title, name FROM films JOIN languages USING(language_id)", &[])
        .await
        .map(|rs| {
            rs.into_iter()
                .map(|r| ARows {
                    title: r.get(0),
                    name: r.get(1),
                })
                .collect()
        })
}
