src/snapshots/sqlc__test__select__join__left_join_on.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub title: String,
    pub name: Option<String>,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query(
            "SELECT f.title, l.name FROM films AS f LEFT JOIN languages AS l ON f.language_id = l.language_id",
            &[],
        )
        .await
        .map(|rs| {
            rs.into_iter()
                .map(|r| ARows {
                    title: r.get(0),
                    name: r.get(1),
                })
                .collect()
        })
}
